--- a/src/Components/text-home-section2/text-home-section2.css
+++ b/src/Components/text-home-section2/text-home-section2.css
@@ -11,11 +11,12 @@
     color: #231E41;
     font-family: 'Rubik', sans-serif;
     margin-bottom: 60px;
+    margin-left: 20px;
 }
 .text-section2 .list{
     display: flex;
     justify-content: space-around;
-    margin: 50px 0;
+    margin: 50px 50px;
 }
 .text-section2 .list .num{
     width: 100px;
