--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -13,3 +13,8 @@
     display: flex;
     justify-content: space-between; 
 }
+
+ .section-3  .contact{
+    display: flex;
+    justify-content: space-between; 
+}
