--- a/src/Components/buttom-home-section3/buttom-home-section3.css
+++ b/src/Components/buttom-home-section3/buttom-home-section3.css
@@ -3,15 +3,17 @@
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    background-color: white;
 }
 .btn-section3 a{
-    padding: 20px 30px;
+    padding:20px 30px;
     background-color:#F5C332;
     transition: 0.5s;
-    
+    font-weight: bold;
 }
 .btn-section3 a span{
-    font-size: 30px;
+    font-size: 20px;
     padding: 10px;
 }
 .btn-section3 a:hover{
