--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -17,4 +17,6 @@
  .section-3  .contact{
     display: flex;
     justify-content: space-between; 
+    align-items: flex-end;
+    margin: 100px 0px;
 }
