--- a/src/Components/productCard/productCard.css
+++ b/src/Components/productCard/productCard.css
@@ -1,9 +1,97 @@
-.card{
-    padding: 0;
-    margin: 5px;
-    width: 370px;
+.Card{
+    /* width: 330px; */
+    margin:20px 0;
+    /* height: 500px; */
+    border: none;
 }
-.card img{
-    margin: 0;
+.Card img{
     width: 100%;
+    height: 100%;
+    transition: 0.5s;
+}
+.Card .image{
+    overflow: hidden;
+}
+.Card:hover .image img{
+    transform: scale(1.1);
+}
+.Card .card-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #F2F3F5;
+    height: 60px;
+}
+.Card .card-title .name{
+    font-weight: bold;
+    font-size: 14px;
+    color: #231E41;
+    padding: 0 5px;
+}
+.Card .card-title .price{
+    font-weight: bold;
+    font-size: 14px;
+    background-color: #F5C332;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    margin: 20px 0;
+}
+.Card .card-dis{
+    height: 80px;
+}
+.Card .card-dis p{
+    font-size: 12px;
+    padding: 10px;
+    color: gray;
+}
+.Card .card-rate .star{
+    margin: 2px;
+    color: #F5C332;
+    font-size: 20px;
+    margin: 10px 0;
+}
+.Card .card-rate  span{
+    font-size: 14px;
+    color: rgba(128, 128, 128, 0.719);
+}
+.card-btn{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 30px 0px;
+}
+.card-btn .btn-1{
+    background-color: #F5C332;
+}
+.card-btn .btn-2{
+    background-color: #F5C332;
+}
+.card-btn .btn-1 button{
+    background-color: #F5C332;
+    font-weight: bold;
+    font-size: 16px;
+    color: #231E41;
+    border: none;
+    padding: 10px;
+}
+.card-btn .btn-2 button{
+    background-color: #F5C332;
+    font-weight: bold;
+    font-size: 16px;
+    color: #231E41;
+    border: none;
+    padding: 10px;
+}
+.card-btn .btn-1  .cart{
+    font-size: 25px; 
+    background-color: #F5C332;
+    margin:  10px;
+}
+.card-btn .btn-2  .cart{
+    background-color: #F5C332;
+    font-size: 25px; 
+    margin:  10px;
 }
